--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>customer</module>
     <module>fraud</module>
     <module>Eureka-server</module>
+    <module>clients</module>
   </modules>
 
   <name>amigosservices</name>
@@ -53,6 +54,17 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <version>2.2.2.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amigoscode</groupId>
+      <artifactId>clients</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
