--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>fraud</module>
     <module>Eureka-server</module>
     <module>clients</module>
+    <module>notification</module>
   </modules>
 
   <name>amigosservices</name>
