--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>Eureka-server</module>
     <module>clients</module>
     <module>notification</module>
+      <module>apigw</module>
   </modules>
 
   <name>amigosservices</name>
