--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
   <artifactId>amigosservices</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <modules>
     <module>customer</module>
     <module>fraud</module>
-    <module>Eureka-server</module>
+    <module>eureka-server</module>
     <module>clients</module>
     <module>notification</module>
       <module>apigw</module>
@@ -25,9 +26,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <spring.boot.maven.version>2.5.7</spring.boot.maven.version>
+    <spring.boot.maven.plugin.version>2.5.7</spring.boot.maven.plugin.version>
     <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
-    <spring.cloud.version>2020.0.3</spring.cloud.version>
+    <spring.cloud-version>2020.0.3</spring.cloud-version>
   </properties>
 
   <dependencyManagement>
@@ -42,7 +43,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring.cloud.version}</version>
+        <version>${spring.cloud-version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -61,13 +62,6 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
-      <version>2.2.2.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>com.amigoscode</groupId>
-      <artifactId>clients</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -77,9 +71,20 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
-          <version>${spring.boot.maven.version}</version>
+          <version>${spring.boot.maven.plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+              <configuration>
+                  <source>17</source>
+                  <target>17</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
