--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -11,4 +11,15 @@
     <packaging>jar</packaging>
     <artifactId>clients</artifactId>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
 </project>
